--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Vite + React + TS</title>
+    <script>
+      window.onSpotifyWebPlaybackSDKReady = () => {
+        console.log('Spotify Web Playback SDK is ready');
+      };
+    </script>
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
   </head>
   <body>
     <div id="root"></div>
